# telegram-bot

./: .gitignore  .helmignore  .mise.toml  Cargo.toml  Chart.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  values.yaml
.github/workflows/: build.yml  build_publish.yml  main.yml
.kubernetes/: manifest.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: bot.yaml  configmap.yaml  cronjob.yml  cronjobs.yml  deployment.yaml  secret.yaml
src/: api.rs  lib.rs  main.rs  resolver.rs
src/telegram-bot/: bot.py  config.py  exceptions.py  helper.py  logger.py  main.py  poll.py  utils.py  wostream.py
src/telegram_bot/: bot.py  config.py  helper.py  logger.py  main.py  poll.py  utils.py  wostream.py
templates/: configmap.yaml  cronjob-participation.yml  cronjob.yml  deployment.yaml  secret.yaml
