[package]
name = "timhatdiehandandermaus"
version = "0.1.0"
edition = "2021"
authors = ["timhatdiehandandermaus@carstens.tech"]
license = "MIT"
repository = "https://github.com/tim-hat-die-hand-an-der-maus/telegram-bot"
homepage = "https://github.com/tim-hat-die-hand-an-der-maus/telegram-bot"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "timhatdiehandandermaus"

[lib]
name = "timhatdiehandandermaus"

[dependencies]
anyhow = "1.0.66"
teloxide = { version = "0.7.3", features = ["macros", "auto-send", "native-tls", "ctrlc_handler", "dispatching2", "cache-me"], default-features = false }
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros"] }
log = { version = "0.4.17", default-features = false }
pretty_env_logger = { version = "0.4.0", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
reqwest = { version = "0.11.13", features = ["blocking", "default-tls"], default-features = false }
url = { version = "2.3.1", default-features = false }
serde = { version = "1.0.152", features = ["std"], default-features = false }
serde_derive = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.87", features = ["raw_value"], default-features = false }
teloxide-core = { version = "0.9.1", features = ["native-tls"], default-features = false } # rustls
futures = { version = "0.3.21", features = ["std", "async-await", "executor"], default-features = false }
futures-util = { version = "0.3.21", features = ["std", "async-await", "async-await-macro"], default-features = false }
async-std = "1.12.0"
tokio-stream = { version = "0.1.11", features = ["time"], default-features = false }
