[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.blindfolded.surgery"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.11"
httpx = "^0.25.2"
python-telegram-bot = "20.7"
thefuzz = "^0.20.0"
python-levenshtein = "^0.23.0"
timhatdiehandandermaus-sdk = { version = "2.0.1", source = "internal" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
