[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.blindfolded.surgery"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.12"
httpx = "^0.25.2"
python-telegram-bot = "20.7"
thefuzz = "^0.20.0"
python-levenshtein = "^0.24.0"
timhatdiehandandermaus-sdk = { version = "2.0.2", source = "internal" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.13"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
