[project]
requires-python = "==3.13.*"
name = "telegram-bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "httpx ==0.28.*",
    "python-telegram-bot ==21.10",
    "python-levenshtein ==0.26.1",
    "sentry-sdk ==2.20.*",
    "timhatdiehandandermaus-sdk ==3.1.0",
]

[dependency-groups]
dev = [
    "mypy ==1.14.*",
    "pytest >=8, <9",
    "ruff ==0.9.2",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
timhatdiehandandermaus-sdk = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
